syntax = "proto3";

import "messages.proto";
package com.chaos.remoting.grpc;
option java_multiple_files = false;

service RemotingService {
    rpc execute (RemoteInvocationRequest) returns (RemoteInvocationResponse) {}
    rpc getRemoteInfo (RemoteInvocationRequest) returns (RemoteInvocationResponse) {}
}